// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swatches renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-swatches swatches-picker"
    style="width: 320px; height: 240px;"
  >
    <div
      class="rc-raised"
    >
      <div
        class="rc-raised__bg"
        style="box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(255, 255, 255);"
      />
      <div
        class="rc-raised__content"
      >
        <div
          style="height: 240px; overflow-y: scroll;"
        >
          <div
            style="padding: 16px 0px 6px 16px;"
          >
            <div
              style="padding-bottom: 10px; width: 40px; float: left; margin-right: 10px;"
            >
              <span>
                <div
                  class="rc-swatch"
                  style="background: rgb(255, 255, 255); width: 40px; height: 24px; cursor: pointer; margin-bottom: 1px; overflow: hidden; -webkit-border-radius: 0 0 2px 2px; border-radius: 0 0 2px 2px;"
                  tabindex="0"
                  title="#fff"
                >
                  <div
                    style="color: rgb(0, 0, 0); margin-left: 8px; display: none;"
                  >
                    <svg
                      style="fill: currentcolor; width: 24px; height: 24px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </div>
            <div
              style="padding-bottom: 10px; width: 40px; float: left; margin-right: 10px;"
            >
              <span>
                <div
                  class="rc-swatch"
                  style="background: rgb(51, 51, 51); width: 40px; height: 24px; cursor: pointer; margin-bottom: 1px; overflow: hidden; -webkit-border-radius: 0 0 2px 2px; border-radius: 0 0 2px 2px;"
                  tabindex="0"
                  title="#333"
                >
                  <div
                    style="color: rgb(255, 255, 255); margin-left: 8px; display: none;"
                  >
                    <svg
                      style="fill: currentcolor; width: 24px; height: 24px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </div>
            <div
              style="clear: both;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwatchesColor renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="width: 40px; height: 24px; cursor: pointer; margin-bottom: 1px;"
      tabindex="0"
    >
      <div
        style="color: rgb(255, 255, 255); margin-left: 8px; display: none;"
      >
        <svg
          style="fill: currentcolor; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`SwatchesColor renders with props 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="width: 40px; height: 24px; cursor: pointer; margin-bottom: 1px; overflow: hidden; -webkit-border-radius: 0 0 2px 2px; border-radius: 0 0 2px 2px;"
      tabindex="0"
    >
      <div
        style="color: rgb(255, 255, 255); margin-left: 8px; display: block;"
      >
        <svg
          style="fill: currentcolor; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`SwatchesGroup renders correctly 1`] = `
<DocumentFragment>
  <div
    style="padding-bottom: 10px; width: 40px; float: left; margin-right: 10px;"
  >
    <span>
      <div
        class="rc-swatch"
        style="background: rgb(255, 255, 255); width: 40px; height: 24px; cursor: pointer; margin-bottom: 1px; overflow: hidden; -webkit-border-radius: 0 0 2px 2px; border-radius: 0 0 2px 2px;"
        tabindex="0"
        title="#fff"
      >
        <div
          style="color: rgb(0, 0, 0); margin-left: 8px; display: none;"
        >
          <svg
            style="fill: currentcolor; width: 24px; height: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
            />
          </svg>
        </div>
      </div>
    </span>
  </div>
</DocumentFragment>
`;
